--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,10 @@
 .modal {
   position: absolute;
-  /* top: 20px; */
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
   min-height: 990px;
   background-color: #fcfcfc;
-  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2); */
   border-radius: 4px;
   padding: 40px;
 }
@@ -26,4 +23,24 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   /* transition: border-color var(--transition-dur-and-fun); */
+}
+
+.button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: none;
+  background-color: #ffffff;
+}
+
+.modal-headline {
+  font-family: 'Seymour One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.4;
+  color: #131313;
+  padding-top: 32px;
+  display: flex;
+  align-items: center;
 }
